--- a/apps/ui/templates/about.html
+++ b/apps/ui/templates/about.html
@@ -80,7 +80,7 @@ extend, and trust.",
         </div>
 
         <figure class="story-photo">
-            <img src="/static/img/photos/andrea_erik2.png"
+            <img src="/static/img/photos/andrea_erik2.jpg"
                 alt="Andrea with her son Eric during a communication session">
             <figcaption>
                 Andrea and her son Eric. Their experience helped shape the core ideas behind A3CP.
